arrayList changed to List